templates/gitlab-monitor_template.yaml
---
# Source: gitlab-monitor/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "release-name-gitlabmonitor"
spec:
  type: ClusterIP
  ports:
    - name: 80tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: "release-name-gitlabmonitor"
    release: release-name
---
# Source: gitlab-monitor/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "release-name-gitlabmonitor"
  labels:
    app: "release-name-gitlabmonitor"
    chart: "gitlab-monitor-1.3.1"
    heritage: Helm
    release: release-name
    app.kubernetes.io/name: gitlab-monitor
    helm.sh/chart: gitlab-monitor-1.3.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 
  selector:
    matchLabels:
      app: "release-name-gitlabmonitor"
      release: release-name
  template:
    metadata:
      labels:
        app: "release-name-gitlabmonitor"
        release: release-name
      annotations:
        rollme: "Iibhb"
    spec:
      containers:
      - name: gitlabmonitor
        image: "ghcr.io/timoschwarzer/gitlab-monitor:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: 80tcp
          protocol: TCP
        resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: gitlab-monitor/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlabmonitor
  labels:
    app: gitlabmonitor
    chart: "gitlab-monitor-1.3.1"
    heritage: Helm
    release: release-name
spec:
  tls:
    - hosts:
      - gitlabmonitor.company.com
      secretName: gitlabmonitor
  rules:
  - host: "gitlabmonitor.company.com"
    http:
      paths:
        - path: /
          pathType: Prefix        
          backend:
            service:
              name: release-name-gitlabmonitor
              port:
                name: 80tcp
